[metadata]
name = Geneci
version = attr: geneci.__version__
author = Ryan Sanchez
author_email = ryan.sanchez@gofactr.com
description = 
    ECI / ECEF conversion tool that accounts for moderate precession / nutation
    for good-enough conversions for many applications.
keywords = eci, ecef, inertial
license = MIT license


[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    
